--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^7.1.0",
+    "@ionic/storage-angular": "^4.0.0",
     "firebase": "^9.22.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.5.0",
