--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@awesome-cordova-plugins/barcode-scanner": "^6.4.0",
+    "@awesome-cordova-plugins/core": "^6.4.0",
     "@capacitor/android": "5.0.4",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.7.3",
@@ -31,6 +33,7 @@
     "@ionic/storage-angular": "^4.0.0",
     "firebase": "^9.22.1",
     "ionicons": "^7.0.0",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -46,7 +49,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@capacitor/cli": "4.7.3",
+    "@capacitor/cli": "^4.8.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
